--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
 	<string name="offerImage">Offer Image</string>
 	<string name="payout">Payout: %1$s</string>
 	<string name="progress_message">Loading…</string>
-	<string name="noOffers">No offers</string>
+	<string name="noOffers">No Offers</string>
 </resources>
